namespace ExpressionEngine.Ast
{
    /// <summary>
    /// Base type for all expression nodes.
    /// </summary>
    public abstract class ExpressionNode
    {
    }
}
