namespace ExpressionEngine.Lexing
{
    /// <summary>
    /// All supported lexical token types.
    /// </summary>
    public enum TokenType
    {
        NUMBER,
        PLUS,
        MINUS,
        MULTIPLY,
        DIVIDE,
        LEFT_PAREN,
        RIGHT_PAREN,
        EOF
    }
}
